...
        }

        let alert = NSAlert()
        alert.messageText = "Close All Windows?"
        alert.informativeText = "All terminal sessions will be terminated."
        alert.addButton(withTitle: "Close All Windows")
        alert.addButton(withTitle: "Cancel")
        alert.alertStyle = .warning
        alert.beginSheetModal(for: confirmWindow, completionHandler: { response in
            if response == .alertFirstButtonReturn {
                // This is important so that we avoid losing focus when Stage
                // Manager is used (#8336)
                alert.window.orderOut(nil)
...
            return
        }

        Task {
            let alert = NSAlert.reviewWindowsAlert(
                messageText: "You have \(confirmControllers.count) windows with running processes. Do you want to review these windows before closing?",
                terminateNowButtonTitle: "Close"
            )
            switch await alert.beginSheetModal(for: window) {
            case .alertFirstButtonReturn:
                await reviewWindows(confirmControllers, window: window)
            case .alertSecondButtonReturn:
                closeWindowImmediately()
...
